kubernetes/flux/clusters/talos-cluster/apps/network-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: network-test
  labels:
    pod-security.kubernetes.io/enforce: privileged
---
apiVersion: v1
kind: Pod
metadata:
  name: network-debug
  namespace: network-test
spec:
  containers:
  - name: network-debug
    image: nicolaka/netshoot
    command:
    - sleep
    - "3600"
    securityContext:
      privileged: true # This allows full access to the host network
  restartPolicy: Always
  hostNetwork: true # This puts the pod on the host's network
