kubernetes/flux/clusters/talos-cluster/apps/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http
  namespace: test-web-app
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`test-web-app.homelab.emerconnelly.com`)
    kind: Rule
    middlewares:
    - name: https-redirect
    services:
    - name: noop@internal
      kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https
  namespace: test-web-app
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`test-web-app.homelab.emerconnelly.com`)
    kind: Rule
    services:
    - name: clusterip
      port: 80
  tls:
    secretName: cert-manager-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: test-web-app
spec:
  redirectScheme:
    scheme: https
    permanent: true
