kubernetes/flux/clusters/talos-cluster/apps/test-web-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-web-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-web-app
  namespace: test-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-web-app
  template:
    metadata:
      labels:
        app: test-web-app
    spec:
      containers:
      - name: aks-helloworld
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer
  namespace: test-web-app
spec:
  type: LoadBalancer
  loadBalancerIP: 172.21.0.171
  ports:
  - port: 80
  selector:
    app: test-web-app
---
apiVersion: v1
kind: Service
metadata:
  name: clusterip
  namespace: test-web-app
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: test-web-app
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress
  namespace: test-web-app
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: Host(`test-web-app.homelab.emerconnelly.com`)
    kind: Rule
    services:
    - name: clusterip
      port: 80
  tls:
    secretName: test-web-app-tls
